Finally sort of fixing image alignment to work in CSS

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ Text Domain: blank
 /* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
 -------------------------------------------------------------- */
 
+@import '/wp-content/themes/blank-wp/image-align.css';
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -246,17 +248,40 @@ code {
 	margin-right:auto;
 }
 
-.head {
-  margin:20px auto 15px auto;
+h1, h2, h3, h4, h5, h6 {
+  font-family:"Myriad Pro", Helvetica, sans-serif;
+  font-weight:bold;
+  color:#333;
+  margin:30px auto 5px auto;
+  padding-left:200px;
+  padding-right:200px;
 }
 
 .title {
+  margin-bottom:15px;
+}
+
+h1 {
   font-family:"Myriad Pro", Helvetica, sans-serif;
   font-weight:bold;
+  font-size:30px;
+  line-height:35px;
+  color:#333;
+}
+
+h2 {
   font-size:25px;
   line-height:28px;
-  color:#333;
-  margin:0 0 2px 0;
+}
+
+h3 {
+  font-size:20px;
+  line-height:28px;
+}
+
+h4 {
+  font-size:15px;
+  line-height:28px;
 }
 
 .meta {
